--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^5.1.0",
     "express-handlebars": "^8.0.3"
   },
-  "devDependecies": {
+  "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
